@@ -1,3 +1,11 @@
+Fri Apr  6 20:16:18 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>
+
+        * cuts/iccm/arch/tron/deployment/Tron_Deployment_Handler.cpp:
+        * cuts/iccm/arch/tron/servant/Tron_Event.h:
+        * cuts/iccm/arch/tron/servant/Tron_Publisher_Table_T.cpp:
+
+          Fixed implementation for sending tron output events
+
 Fri Apr  6 19:16:29 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>
 
         * cuts/iccm/arch/tron/deployment/TestAdapter_i.h:
